added validation for password

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -38,7 +38,8 @@ en:
       enter_val:    "Please enter a %{val}."
       character_validation: "%{val} must be less than %{num} characters"
       email:          "Email"
-      user_name:           "Name"
+      user_name:      "User Name"
+      password:       "Password"
   web:
     register_facebook:    "Register With Facebook"
     sign_up:              "Sign up"
