Login Functionality Implementation

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -53,3 +53,5 @@ en:
     agreement:            "By signing up, I agree to"
     privacy:              "Privacy Policy"
     tos:                  "Terms of Use"
+    welcome:              "Welcome to Smart Travel"
+    log_in:               "Log In"
