navbar collapse on mobile view

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -42,7 +42,7 @@ en:
       password:       "Password"
   web:
     register_facebook:    "Register With Facebook"
-    sign_up:              "Sign up"
+    sign_up:              "Sign Up"
     choose_username:      "Choose Username"
     enter_email:          "Enter Email"
     enter_password:       "Enter Password"
@@ -55,3 +55,8 @@ en:
     tos:                  "Terms of Use"
     welcome:              "Welcome to Smart Travel"
     log_in:               "Log In"
+    log_in_account:       "LogIn to your account"
+    dont_have_account:    "Don't have an account?"
+    dublin_bus:           "Dublin Bus"
+    dublin_bikes:         "Dublin Bikes"
+    log_out:               "Log Out"
