Dublin Bikes Implemetation

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -62,3 +62,14 @@ en:
     log_out:              "Log Out"
     skip_and_continue:    "Skip and Continue"
     invalid_credentials:  "Invalid Email/Password. Email Id and Password does not match"
+    stop_info:            "Stop Information for Stop Id %{id} for Stop Name %{name}"
+    stop_information:     "Stop Information"
+    searched_history:     "Searched History"
+    duplicate_record:     "Duplicate Record"
+    no_search_history:    "No Search History Found"
+    address:              "Address: "
+    available_bikes:      "Available Bikes: "
+    available_bike_stands: "Available Bike Stands: "
+    status:                "Status: "
+    station_information:   "Station Information"
+    station_info:         "Station Information for Station Number %{num} for Station Name %{name}"
