--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -62,7 +62,7 @@ en:
     log_out:              "Log Out"
     skip_and_continue:    "Skip and Continue"
     invalid_credentials:  "Invalid Email/Password. Email Id and Password does not match"
-    stop_info:            "Stop Information for Stop Id %{id} for Stop Name %{name}"
+    stop_info:            "Information for Stop Id => %{id} for stop name => %{name}"
     stop_information:     "Stop Information"
     searched_history:     "Searched History"
     duplicate_record:     "Duplicate Record"
@@ -72,4 +72,6 @@ en:
     available_bike_stands: "Available Bike Stands: "
     status:                "Status: "
     station_information:   "Station Information"
-    station_info:         "Station Information for Station Number %{num} for Station Name %{name}"
+    station_info:         "Information for station number => %{num} for station name %{name}"
+    no_search_result:     "No result Found."
+    welcome:              "Welcome"
