Removed google places api

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -74,4 +74,10 @@ en:
     station_information:   "Station Information"
     station_info:         "Information for station number is %{num} for station name is %{name}"
     no_search_result:     "No results found."
-    welcome_msg:              "Welcome"
+    welcome_msg:          "Welcome"
+    due_time:             "Due Time(mins): "
+    departuredatetime:    "Departure Time: "
+    destination:          "Destination: "
+    origin:               "Origin: "
+    scheduledarrivaldatetime: "Arrival Time: "
+    route:                   "Route No:  "
