--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -85,4 +85,12 @@ en:
     distance_from_location: "Distance from your location."
     calc_dist_from_location: "%{dist} meters from your location"
     no_real_time_info:       "No real time information available for this stop"
-
+    pokemons:               "Pokemons"
+    import_csv:             "Import data from CSV"
+    record_created:        "Records created successfully"
+    weight:                 "Weight"
+    height:                 "Height"
+    name:                   "Name"
+    id:                     "Id"
+    record_deleted:         "All records deleted successfully"
+    delete_all:             "Delete all"
