sidekiq implementation and code refactor

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -87,10 +87,12 @@ en:
     no_real_time_info:       "No real time information available for this stop"
     pokemons:               "Pokemons"
     import_csv:             "Import data from CSV"
-    record_created:        "Records created successfully"
+    record_created:         "Records creation in Progress"
     weight:                 "Weight"
     height:                 "Height"
     name:                   "Name"
     id:                     "Id"
-    record_deleted:         "All records deleted successfully"
+    record_deleted:         "Records deletion in Progress"
     delete_all:             "Delete all"
+    confirmation_msg:       "Are you sure? You want to delete all the pokemons"    
+    add_file:               "Please add a file"
