Added pokemon deletion functionality

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -40,7 +40,13 @@ en:
       email:          "Email"
       user_name:      "User Name"
       password:       "Password"
+    pokemon:
+      name:           "Name"
+      weight:         "Weight"
+      height:         "Height"
   web:
+    enter_val:            "Please enter a %{val}."
+    character_validation: "%{val} must be less than %{num} characters"
     register_facebook:    "Register With Facebook"
     sign_up:              "Sign Up"
     choose_username:      "Choose Username"
@@ -94,5 +100,17 @@ en:
     id:                     "Id"
     record_deleted:         "Records deletion in Progress"
     delete_all:             "Delete all"
-    confirmation_msg:       "Are you sure? You want to delete all the pokemons"    
+    confirmation_msg:       "Are you sure? You want to delete all the pokemons"
     add_file:               "Please add a file"
+    create_pokemon:         "Create Pokemon"
+    enter_name:             "Enter Name"
+    enter_height:           "Enter Height"
+    enter_weight:           "Enter Weight"
+    submit:                 "Submit"
+    record_not_created:     "Record Not Created"
+    record_created:         "Record Created Successfully"
+    destroy_pok:            "Delete Pokemon"
+    confirm_delete:         "Are you sure? You want to delete the %{model} %{name}"
+    delete:                 "Delete"
+    pokemon_delete:         "Are you sure?" 
+    pokemon:                "Pokemon"
